# landscape-toolkit

./: .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  Cargo.toml  README.md
.cargo/: config
.gitlab/: alse.yml  alse_test.yml  build_astra_se_1_7.yml  build_binding_c++_astra_se_1_7.yml  build_binding_c++_windows_x86_64.yml  build_windows_x86_64.yml  compose_plugins.yml  test_astra_se_1_7.yml  test_c++_astra_se_1_7.yml  test_c++_windows_x86_64.yml  test_windows_x86_64.yml  win64.yml  win64_test.yml
bindings/c#/: LandscapeToolkitNativeLibraryInterface.cs
bindings/c++/: .gitignore  CMakeLists.txt  main.cpp  vcpkg.json
bindings/c++/include/LandscapeToolkit/: LandscapeToolkit  landscape_toolkit.h  rust_landscape_toolkit_ffi.h
bindings/c++/tests/: test-landscape-toolkit.c++
src/: ffi_exports.rs  lib.rs  main.rs
src/elevation/: elevation_impl.rs  fs_identity.rs  mod.rs  quarter.rs  scan.rs  utils.rs
src/elevation/tile_storage/: mod.rs  tile_key.rs
src/tiles/: mod.rs  tile.rs  tile_storage.rs
src/tiles/tile_storage/: tile_key.rs
