[package]
name = "led_toolkit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
geotiff = "0.0.2"
byteorder = "1.5.0"
lazy_static = "1.4.0"
pretty_env_logger = "0.5.0"
log = "0.4.20"
const_format = "0.2.32"