[package]
name = "landscape_toolkit"
version = "0.1.0"
edition = "2021"
authors = ["Dmitry Ryazancev <75864292+whs31@user.noreply.github.com>"]

[lib]
crate-type = ["cdylib"]
bench = false

[dependencies]
geotiff-rs = "0.1.1"
byteorder = "1.5.0"
pretty_logger = "0.1.8"
const_format = "0.2.32"
nav-types = "0.5.2"
imagesize = "0.12.0"
num-traits = "0.2.17"
num-derive = "0.4.1"
once_cell = "1.18.0"
log = "0.4.20"